Fix for Select Parents and Crossing Method panels should be aligned under the Manage Crosses heading on the left side
Reviewer: Cy Casada (post commit)

Issue: GCP-9533

--- a/src/main/webapp/VAADIN/themes/gcp-default/styles.css
+++ b/src/main/webapp/VAADIN/themes/gcp-default/styles.css
@@ -820,3 +820,4 @@ div.unsaved-changes-dialog div.v-window-contents>div {
 .lm-white-window div.v-window-contents {
 	background: #FFFFFF !important;
 }
+.crosses-select-parents-tab{position: absolute; left: -18px}
